# scripts

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  auto-imports.d.ts  build.ps1  components.d.ts  eslint.config.mjs  eslint.config.ts  index.html  install.ps1  package.json  tsconfig.app.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
src/: App.vue  commands.rs  lib.rs  main.rs  main.ts  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: archive.rs  command_executor.rs  file_copy.rs  fs.rs  hash.rs  repo_mirror.rs  s3_atomic.rs  s3_upload.rs
src-tauri/src/utils/: error.rs  hash.rs
src/commands/: batch_compress.rs  claude_code.rs  compress_delete.rs  deploy.rs  file_copy_rename.rs  find_empty_s3_files.rs  find_unused_files.rs  hash.rs  hash_copy.rs  residue_search.rs  tar_archive.rs  unused_files.rs  video_transcode.rs
src/components/: AppLayout.vue  LogViewer.vue
src/pages/: file-copy.vue  file-hash.vue  index.vue  repo-clone.vue  s3-config.vue  s3-upload.vue
src/pages/file-copy/: index.vue
src/pages/file-copy/components/: FileListItem.vue  file-operations.ts  types.ts
src/pages/file-manager/: index.vue
src/pages/s3-sync/: index.vue
src/pages/s3-sync/components/: S3ConfigDrawer.vue  S3InstanceSelector.vue  SyncPlanDialog.vue  SyncProgress.vue  SyncProgressDialog.vue  file-operations.ts  instances.ts  s3-files.ts  s3-sync-store.ts  sync-plan.ts  types.ts  utils.ts
src/pages/s3-upload/: index.vue
src/pages/s3-upload/components/: s3-files.ts
src/utils/: compress.rs  directory.rs  filesystem.rs  hash.rs  loader.ts  media.rs  mod.rs  s3.rs  ssh.rs
tasks/: image-video-converter.ts
tests/: hash_test.rs
utils/: ffmpeg.ts  hash.test.ts  hash.ts  logger.test.ts  logger.ts  video.ts
