[package]
name = "file-utils"
version = "0.1.0"
edition = "2024"
description = "从 Deno 脚本移植的文件工具集合"
license = "MIT"

[[bin]]
name = "scripts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
tokio = { version = "1.48", features = ["full"] }
walkdir = "2.5"
which = "8.0"
zstd = "0.13"
tar = "0.4"
ignore = "0.4"
regex = "1.11"
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
serde_json = "1.0"
