[package]
name = "scripts"
version = "0.1.0"
edition = "2024"
description = "文件工具集合"
license = "MIT"

[[bin]]
name = "scripts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
bs58 = "0.5"
bytesize = "2.3"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
inquire = "0.9"
dirs = "6.0"
tokio = { version = "1.48", features = ["full"] }
walkdir = "2.5"
ignore = "0.4"
cached = "0.54"
regex = "1.12"
grep-searcher = "0.1"
grep-regex = "0.1"
