[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[lib]
name = "scripts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.8.6", features = ["behavior-version-latest", "rustls"] }
aws-credential-types = "1.2.6"
aws-sdk-s3 = "1.106.0"
base32 = "0.5.1"
blake3 = "1.8.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.5.0"
tempfile = "3.23.0"
walkdir = "2.5.0"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
