[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[lib]
name = "scripts_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.8", features = [
  "behavior-version-latest",
  "rustls"
] }
aws-credential-types = "1.2"
aws-sdk-s3 = "1.108"
base32 = "0.5"
blake3 = "1.8"
mime_guess = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tauri = { version = "2.8", features = [] }
tauri-plugin-dialog = "2.4"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
tempfile = "3.23"
walkdir = "2.5"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }
