[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[lib]
name = "scripts_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = [ "full" ] }
aws-config = { version = "1.8", features = [
  "behavior-version-latest",
  "rustls"
] }
aws-credential-types = "1.2"
aws-sdk-s3 = "1.108"
bs58 = "0.5"
blake3 = "1.8"
chrono = { version = "0.4", features = [ "serde" ] }
mime_guess = "2.0"
moka = { version = "0.12", features = [ "future" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2.4"
tauri-plugin-opener = "2.5"
tauri-plugin-store = "2.4"
tempfile = "3.23"
walkdir = "2.5"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
